--- a/styles/variables.module.scss
+++ b/styles/variables.module.scss
@@ -1,7 +1,10 @@
 /* Colors */
-$hymnal-red: #501005;
+$hymnal-red: #572a28;
 $off-white: #f5f5f3;
-$silver-lettering: #d8d8d8;
+$silver-lettering: #bfbfbf;
+
+/* Fonts */
+$default-font: Minion Pro;
 
 /* Viewport Breakpoints */
 $mobile-breakpoint: 600px;
